Fixed Winterprogramm view (spacing and background)

--- a/szschwaikheim/css/views-styles.css
+++ b/szschwaikheim/css/views-styles.css
@@ -3,41 +3,6 @@
  * Views Styling
  */
 
-
-.views-view-grid td {
-	background-image: url("../images/pixel_75.png");
-	border: 1px white solid;
-	border-radius: 10px;
-	padding: 20px;
-	padding-top: 10px;
-	margin: 20px;
-	text-align: center;
-}
-
-.views-view-grid td:hover {
-	box-shadow: 0 0 10px white;
-	background-image: url("../images/pixel_90.png");
-}
-
-table.views-view-grid {
-	border-spacing: 20px;
-	border-collapse: separate;
-}
-
-.views-view-grid h2 {
-	margin-bottom: 10px;
-}
-
-.views-view-grid h2.node-title a {
-	color: black;
-	text-decoration: none;
-	font-size: 0.9em;
-}
-
-.views-view-grid h2.node-title a:hover {
-	text-decoration: underline;
-}
-
 .submitted {
 	position: static;
 	top: 0;
